docs/Firewall Drop Rules
-A INPUT -s 5.140.112.29 -j DROP
-A INPUT -s 12.227.111.181 -j DROP
-A INPUT -s 37.206.230.98 -j DROP
-A INPUT -s 63.140.125.6 -j DROP
-A INPUT -s 69.168.184.210 -j DROP
-A INPUT -s 95.54.30.8 -j DROP
-A INPUT -s 98.84.72.145 -j DROP
-A INPUT -s 116.126.87.183 -j DROP
-A INPUT -s 148.228.128.231 -j DROP
-A INPUT -s 148.243.222.97 -j DROP
-A INPUT -s 179.127.40.136 -j DROP
-A INPUT -s 179.185.71.91 -j DROP
-A INPUT -s 186.5.7.98 -j DROP
-A INPUT -s 187.17.166.3 -j DROP
-A INPUT -s 187.141.82.87 -j DROP
-A INPUT -s 187.216.238.9 -j DROP
-A INPUT -s 190.95.191.67 -j DROP
-A INPUT -s 190.106.215.178 -j DROP
-A INPUT -s 190.129.85.42 -j DROP
-A INPUT -s 200.11.230.163 -j DROP
-A INPUT -s 200.68.71.221 -j DROP
-A INPUT -s 200.87.110.154 -j DROP
-A INPUT -s 200.133.2.21 -j DROP
-A INPUT -s 201.18.21.212 -j DROP
-A INPUT -s 201.151.95.126 -j DROP
-A INPUT -s 201.249.200.109 -j DROP
-A INPUT -s 212.176.197.29 -j DROP
